project title always shows, fixed about me spacing:

--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@
     font-family: Lato, Arial, sans-serif;
     font-size: 18px;
     padding-bottom: 25px;
+    margin-bottom: -125px;
 }
 
 #about_me img {
